--- a/papers/FLife/R/figs.Rmd
+++ b/papers/FLife/R/figs.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "FLife"
 subtitle: "Figs"
-author: "L Kell & A Tidd"
+author: "L Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
