--- a/papers/randomGrid/R/om.Rmd
+++ b/papers/randomGrid/R/om.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Random Grid"
 subtitle: "MSE"
-author: "L Kell & A Tidd"
+author: "L Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
