--- a/tasks/task4/R/assessment-length.Rmd
+++ b/tasks/task4/R/assessment-length.Rmd
@@ -58,12 +58,12 @@ dirDat=file.path(dirMy,"data")
 ```
 ```{r, sa}
 library(LBSPR)
-source('~/Desktop/sea++/mydas/pkg/R/lbspr.R')
+source('~/Desktop/sea++/mydas/pkg/R/lbspr.R') 
 ```
 
 ```{r}
 library(MLZ)
-source("/home/laurence/Desktop/sea++/mydas/pkg/R/mlz.R")
+source("/home/laurence/Desktop/sea++/mydas/pkg/R/mlz.R")  
 ```
 
 ```{r, connection}
@@ -85,24 +85,37 @@ bio=dbGetQuery(con, paste0("SELECT year, speciesgp, fishlength_cm,  SUM(number*(
 mnl=ddply(bio,.(speciesgp,year), with, data.frame(data=sum(fishlength_cm*number)/sum(number)))
 ```
 
-```{r}
-ggplot(subset(mnl,speciesgp%in%c("BLL","TUR")))+
+## Brill
+
+```{r, fig.height=4}
+ggplot(subset(mnl,speciesgp%in%c("BLL")))+
   geom_line(aes(year,data))+
   facet_grid(speciesgp~.,scale="free")+
   theme_bw()
 ```
 
-## Brill
+**Figure `r iFig=iFig+1; iFig`** Mean Length 
+
+
 ```{r, brill, fig.height=4}
 load("/home/laurence/Desktop/Dropbox/mydasOMs/data/brill.RData")
 ```
+
 ### MLZ  
-```{r, brill-mlz}
+```{r, brill-mlz, fig.height=4}
 library(MLZ)
 source("/home/laurence/Desktop/sea++/mydas/pkg/R/mlz.R")
 
-mlz(as.FLQuant(subset(mnl,speciesgp=="BLL")[,2:3]),FLPar(aaply(prior,1,mean)))
+len      =as.FLQuant(subset(mnl,speciesgp=="BLL")[,2:3])
+brill.mlz=mlz(len,FLPar(aaply(prior,1,mean)),ncp=3)
+ 
+ggplot(mlz.z(brill.mlz,len))+
+  geom_line(aes(year,z,   group=block))+
+  geom_line(aes(year,z+se,group=block),linetype=2)+
+  geom_line(aes(year,z-se,group=block),linetype=2)+
+  theme_bw()+xlab("Year")+ylab("Z")
 ```
+**Figure `r iFig=iFig+1; iFig`** Estimates of Z. 
 
 ### LBSPR
 ```{r, brill-lbspr}
@@ -144,6 +157,16 @@ ggplot(melt(cbind(year=min(subset(bio, speciesgp=='BLL')$year)-1+seq(dim(bll.lbs
 
 
 ## Turbot
+
+```{r, fig.height=4}
+ggplot(subset(mnl,speciesgp%in%c("TUR")))+
+  geom_line(aes(year,data))+
+  facet_grid(speciesgp~.,scale="free")+
+  theme_bw()
+```
+
+**Figure `r iFig=iFig+1; iFig`** Mean Length 
+
 ```{r, fig.height=4}
 load("/home/laurence/Desktop/Dropbox/mydasOMs/data/turbot.RData")
 
@@ -152,9 +175,17 @@ dat=data.frame(Quantity=c("Linf","L50","Lopt"),
 ```
 
 ### MLZ
-```{r, turbot-mlz}
-mlz(as.FLQuant(subset(mnl,speciesgp=="TUR")[,2:3]),FLPar(aaply(prior,1,mean)))
+```{r, turbot-mlz, fig.height=4}
+len       =as.FLQuant(subset(mnl,speciesgp=="TUR")[,2:3])  
+turbot.mlz=mlz(len,FLPar(aaply(prior,1,mean)),ncp=3)
+
+ggplot(mlz.z(turbot.mlz,len))+
+  geom_line(aes(year,z,   group=block))+
+  geom_line(aes(year,z+se,group=block),linetype=2)+
+  geom_line(aes(year,z-se,group=block),linetype=2)+
+  theme_bw()+xlab("Year")+ylab("Z")
 ```
+**Figure `r iFig=iFig+1; iFig`** Estimates of Z. 
 
 ### LBSPR
 ```{r}
