--- a/tasks/task4/R/ray.Rmd
+++ b/tasks/task4/R/ray.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "FLife: Operating Model Conditioning"
 subtitle: "Thornback Ray"
-author: "L Kell & A Tidd"
+author: "L Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
