--- a/tasks/task1/R/productivity.Rmd
+++ b/tasks/task1/R/productivity.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MyDas"
 subtitle: "Species Productivity"
-author: "Laurie Kell & Alex Tidd"
+author: "Laurie Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
