--- a/tasks/task2/R/FLife-gurnards.Rmd
+++ b/tasks/task2/R/FLife-gurnards.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MyDas"
 subtitle: "Gurnard Life History Relationships"
-author: "Laurie Kell & Alex Tidd"
+author: "Laurie Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown:::pdf_document
 vignette: >
