--- a/tasks/task4/R/brill.Rmd
+++ b/tasks/task4/R/brill.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "FLife: Operating Model Conditioning"
 subtitle: "Brill"
-author: "L Kell & A Tidd"
+author: "L Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
