--- a/tasks/task4/R/priors.Rmd
+++ b/tasks/task4/R/priors.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Priors for Operating Models"
-author: " L Kell & A Tidd"
+author: " L Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
