--- a/tasks/task4/R/task4-stocks.Rmd
+++ b/tasks/task4/R/task4-stocks.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Task 4"
 subtitle: "Stocks by Assessment Cat"
-author: "Laurie Kell & Alex Tidd"
+author: "Laurie Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
