--- a/tasks/task6/12month/mydasMI.Rmd
+++ b/tasks/task6/12month/mydasMI.Rmd
@@ -3,7 +3,7 @@ title: "MyDas"
 subtitle: "**M**S**Y** for **DA**ta-limited **S**tocks"
 author: "Laurence Kell, Alex Tidd, Coilin Minto"
 date: "Funded by the Irish Exchequer and EMFF 2014-2020"
-output: ioslides_presentation
+output: beamer_presentation
 ---
 
 ```{r setup, include=FALSE}
@@ -593,7 +593,7 @@ grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/papers/randomGri
 ## Next Steps
 
 ### **Case studies**
-+ Summarise current knowledge and infomation
++ Summarise current knowledge and information
 + Evaluate alternative management plans and data collection options
 
 ### Evaluate **Methods**
@@ -613,7 +613,7 @@ Consider the data along with the assumptions, estimator and management and feedb
 ### **Diagnostics**
 Compare across species, stocks, fisheries and advice rules
 
-### **Value of infomation**
+### **Value of information**
 Models are cheap, but data is expensive
 
 ### **Risk**
